# Server

./: .gitignore  APIDoc.yml  CMakeLists.txt  Client.cpp  Doxyfile  PKGBUILD  Pi-Ear-Default.db  PiEar-Server.cpp  README.md  click.cpp  click.h  openapi: '3.0.2'.yml
.github/workflows/: cmake.yml  dev_cmake.yml
Installers/ArchLinux/: PKGBUILD  piear.install  piear.service
PiEar_HTTP_Server/: documentation.yaml  index.js  main.js  package-lock.json  package.json  piear_test_save_load.json  server.js  test_webserver.js  wsclient.cpp
PiEar_HTTP_Server/src/: PiEar_HTTP_Server.js  Response_Helpers.js  server.js  test.js
PiEar_HTTP_Server/tests/: Supertest_Testing.js  afterSetup.js  beforeSetup.js  before_websocket_tests.js  bpm_tests.js  channel_name_tests.js  setupWebsocket.js  testValidators.js  test_helper.js  test_webserver.js
helpers/: channel.hpp  load-data.hpp  queue.hpp  ring-buffer.hpp  task.hpp
http/: CMakeLists.txt  main.cc
http/controllers/: PiEar_bpm.cc  PiEar_bpm.h  PiEar_channel_name.cc  PiEar_channel_name.h
http/test/: CMakeLists.txt
include/: audio.h  channel.h  click.h  database.h  globals.h  http-server.h  json_data.h  load-data.h  logger.h  multicast-server.h  task.h  task.hpp  udp-server.h
src/: PiEar-Server.cpp  audio.cpp  channel.cp  channel.cpp  click.cpp  database.cpp  globals.cpp  http-server.cpp  json_data.cpp  load-data.cp  load-data.cpp  logger.cpp  multicast-server.cpp  task.cpp  udp-server.cpp
tests/: gen_channels.h  gen_channels.hpp  load-data.hpp  test.cpp  test_audio.cpp  test_channel.cpp  test_click.cpp  test_http-server.cpp  test_json_data.cpp  test_load-data.cpp  test_multicast-server.cpp  test_ring_buffer.cpp  test_save_load_data.cpp  test_task.cpp  test_udp-server.cpp
webserver/: documentation.yaml  package-lock.json  package.json
webserver/src/: server.js
webserver/tests/: beforeSetup.js
